# chaserland-grpc-proto

./: .gitignore  CHANGELOG.md  cliff.toml  pyproject.toml  requirements.txt
.github/: dependabot.yml  release.yml
.github/workflows/: create-release-branch.yml  release-draft.yml  tag.yml
chaserland_grpc_proto/protos/user/: user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
protos/user/: user.proto
scripts/: grpc.py
