[tool.poetry]
name = "chaserland-grpc-proto"
version = "0.2.0"
description = ""
authors = ["ChaserZ98 <feiyuzheng98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"

[tool.poetry.scripts]
grpc = "scripts.grpc:grpc_cli"

[tool.poetry.group.dev.dependencies]
click-extra = "^4.7.4"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
