[tool.poetry]
name = "chaserland-grpc-proto"
version = "0.2.1"
description = "Chaserland gRPC proto definitions"
authors = ["ChaserZ98 <feiyuzheng98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
