[project]
name = "chaserland-grpc-proto"
version = "0.2.1"
description = "Chaserland gRPC proto definitions"
authors = [{ name = "ChaserZ98", email = "feiyuzheng98@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
